--- a/css/style.css
+++ b/css/style.css
@@ -22,17 +22,9 @@ section {
 	margin:0 auto;
 }
 /*--HEADER--START--*/
-.header-conteiner {
-	display: flex;
-	flex-direction: row;
-	flex-grow: 1;
-}
 .top-menu {
 	height:80px;
 	display:flex;
-}
-.top {
-	display: flex;
 }
 .top-menu ul {
  	height:80px;
@@ -44,7 +36,7 @@ section {
 	list-style:none;
 	text-decoration:none;
 	display:inline-block;
-	margin-left:15px;
+	margin-left:30px;
 }
 .top-menu a {
 font-family: 'Roboto', sans-serif;
@@ -62,6 +54,12 @@ list-style: none;
 .top-menu a:hover {
 	color:#2196F3;
 }
+.top-menu a:focus {
+	color:#2196F3;
+}
+.top-menu a:active {
+	color:#2196F3;
+}
 a.logo  {
 	width:250px;
 	color:#2196F3;
@@ -73,7 +71,7 @@ a.logo  {
 	line-height: 31px;
 	letter-spacing: 0.03em;
 	text-align: left;
-	padding-top:32px;	
+	padding-top:24px;	
 }
 .logo-color-white {
 	color:#fff;
@@ -110,11 +108,6 @@ position:relative;
 	list-style:none;
 	text-decoration:none;
 	display:inline;
-}
-.top {
-	display:inline-flex;
-	float:right;
-	margin-top: 32px;
 }
 .right {
 	width:150px;
