--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,7 @@ color:#757575;
 .person li {
 			display:inline-block;
 			margin-left:30px;
+	position:static;
 }
 .person  img {
 	width:270px;
