--- a/css/style.css
+++ b/css/style.css
@@ -286,9 +286,10 @@ color:#757575;
 	padding-top:50px;
 }
 .person li {
-			display:inline-block;
-			margin-left:30px;
-	position:static;
+	width:270px;
+	height:260px;
+	display:inline-block;
+	margin-left:30px;
 }
 .person  img {
 	width:270px;
