Update and rename style.css to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,7 @@ section {
 	text-decoration:none;
 	list-style:none;
 }
-contact-link  {
-font-family: Roboto, sans-serif;
-font-size: 14px;
-font-style: normal;
+contact-link:hover  {
 font-weight: 500;
 line-height: 16px;
 letter-spacing: 0.02em;
@@ -199,7 +196,7 @@ margin-top:32px;
 
 	
 }
-.img-list{
+.img-list {
 	margin-top:92px;
 	width:1200px;
 	height:385px;
@@ -251,7 +248,6 @@ color:#212121;
 }
 .person-paragraf {
 font-size: 16px;
-font-weight: 400;
 line-height: 19px;
 letter-spacing: 0.03em;
 text-align: center;
@@ -298,9 +294,7 @@ color:#757575;
 }
 .filters-link {
 	text-decoration:none;
-	font-family: Roboto, sans-serif;
 	font-size: 16px;
-	font-style: normal;
 	font-weight: 500;
 	line-height: 26px;
 	letter-spacing: 0.03em;
