--- a/css/styles.css
+++ b/css/styles.css
@@ -28,99 +28,73 @@ section {
 /*--HEADER--START--*/
 
 .menu {
-	height:80px;
-	display:flex;
-	flex-direction:row;
-	border-bottom:1px solid #eee;
+	display: flex;
+	flex-direction: row;
+	border-bottom:1px solid var(--seven-color);
+	margin:0 auto;
 }
-.logo-top  {
-	width:250px;
-	color:#2196F3;
-	float:left;
-	font-family: Raleway, sans-serif;
+.logo-top   {
+	color:var(--four-color);
+	font-family: 'Raleway', sans-serif;
 	font-size: 26px;
-	font-style: normal;
 	font-weight: 700;
 	letter-spacing: 0.03em;
 	text-align: left;
-	margin-top: 24px;
-	text-decoration:none;
+	padding-top: 27px;
+	padding-bottom: 27px;
 }
 .logo-color-black {
-	color:#212121;
+	color:var(--main-color);
 }
-
-.current:action {
-	color:#2196F3;
-}
-
-.menu ul.list {
-	height:80px;
-	width:300px;
+.navigation-list  {
 	display:flex;
 	flex-direction:row;
-	justify-content:flex-start;
-	float:left;
 }
-.menu li.item {
-	height:80px;
-	display:flex;
-	margin-left:30px;
-	text-decoration:none;
-	list-style:none;
+.navigation-item  {
+	margin-left:45px;
+	display:inline-block;
+	padding-top:32px;
+	padding-bottom:34px;
 }
-contact-link:hover  {
+.navigation-link   {
 font-weight: 500;
-line-height: 16px;
 letter-spacing: 0.02em;
 text-align: left;
-color:#212121;
-text-decoration:none;
-list-style: none;
-margin-top:32px;
+color:var(--main-color);
+
 }
-.menu ul.top {
-	height:80px;
-	float:right;
-	display:flex;
-	flex-direction:row;
+.top  {
+	display: flex;
+	flex-direction: row;
+	margin-left:400px;
 }
-.menu li.right {
-	height:80px;
-	display:flex;
-	margin-left:30px;
-	list-style:none;
-	
+.right  {
+	display:inline-block;
+	margin-left:45px;
+	padding-top:32px;
+	padding-bottom:34px;	
 }
-.contact-link {
+.item-link   {
 font-weight: 500;
 line-height: 0.7;
 letter-spacing: 0.02em;
 text-align: left;
 text-decoration:none;
-color:#757575;
-margin-top:32px;
-
+color:var(--secondary-color);
+padding-top:32px;
+padding-bottom: 34px;
 }
-.menu a:hover {
-	color:#2196F3;
+.navigation-link:hover{
+	color:var(--four-color);
 }
-.menu a:focus {
-	color:#2196F3;
+.navigation-link:focus{
+	color:var(--four-color);
 }
-.menu a:enabled {
-	color:#2196F3;
+.item-link:hover {
+	color:var(--four-color);
 }
-
-.top a.right :hover {
-	color:#2196F3;
-	stroke:#2196F3;
-
-}
-.top a.right :focus {
-	color:#2196F3;
-	stroke:#2196F3;
-
+.item-link:focus {
+	color:var(--four-color);
 }
 /*--HEADER--END--*/
 /*--MAIN--HERO-START--*/
