--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ ul,li {
 	margin-top:0;
 	margin-bottom:0;
 	padding-left: 0;
+	list-style:none;
 }
 .container {
 	width:1200px;
@@ -24,6 +25,9 @@ ul,li {
 }
 section {
 	padding-top:92px;
+}
+a {
+	text-decoration:none;	
 }
 /*--HEADER--START--*/
 
@@ -44,14 +48,14 @@ section {
 	padding-bottom: 27px;
 }
 .logo-color-black {
-	color:var(--main-color);
+	color:var(--four-color);
 }
 .navigation-list  {
 	display:flex;
 	flex-direction:row;
 }
 .navigation-item  {
-	margin-left:45px;
+	margin-left:93px;
 	display:inline-block;
 	padding-top:32px;
 	padding-bottom:34px;
@@ -126,14 +130,12 @@ padding-bottom: 34px;
 	background: #2196F3;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
-	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	font-style: normal;
 	font-weight: 700;
-	line-height: 0.53;
+	line-height: 2;
 	letter-spacing: 0.06em;
 	text-align: center;
-	color:#fff;
+	color:var(--third-color);
 	margin-bottom:200px;
 	cursor:pointer;
 	
@@ -155,7 +157,7 @@ padding-bottom: 34px;
 	font-weight: 700;
 	letter-spacing: 0.03em;
 	text-align: left;
-	color:#212121;
+	color:var(--main-color);
 	margin-top:0;
 	margin-bottom:0;
 	text-transform: uppercase;
@@ -165,7 +167,7 @@ padding-bottom: 34px;
 	line-height: 24px;
 	letter-spacing: 0.03em;
 	text-align: left;
-	color:#757575;
+	color:var(--secondary-color);
 	margin-bottom:0;
 
 	
@@ -181,14 +183,12 @@ padding-bottom: 34px;
 }
 .img-title-h2 {
 	margin:0 auto;
-	font-family: 'Roboto', sans-serif;
 	font-size: 36px;
-	font-style: normal;
 	font-weight: 700;
 	line-height: 42px;
 	letter-spacing: 0.03em;
 	text-align: center;
-	color:#212121;
+	color:var(--main-color);
 
 }
 .img-img {
@@ -198,7 +198,7 @@ padding-bottom: 34px;
 }
 .person {
 	height:548px;
-	background: #F5F4FA;
+	background:var(--five-color);
 
 }
 .person-title-h2 {
@@ -208,7 +208,7 @@ font-weight: 700;
 line-height: 42px;
 letter-spacing: 0.03em;
 text-align: center;
-color:#212121;
+color:var(--main-color);
 
 }
 .person-title-h3 {
@@ -217,7 +217,7 @@ color:#212121;
 	line-height: 19px;
 	letter-spacing: 0.03em;
 	text-align: center;
-	color:#212121;
+	color:var(--main-color);
 
 }
 .person-paragraf {
@@ -225,7 +225,7 @@ font-size: 16px;
 line-height: 19px;
 letter-spacing: 0.03em;
 text-align: center;
-color:#757575;
+color:var(--secondary-color);
 
 }
 .person-list {
@@ -236,7 +236,7 @@ color:#757575;
 .person-item{
 			display:inline-block;
 			margin-left:27px;
-			background-color:#fff;
+			background-color:var(--third-color);
 }
 .person-img {
 	width:270px;
@@ -261,7 +261,7 @@ color:#757575;
 	height:38px;
 	display:inline-block;
 	align-items: center;
-	background: #F5F4FA;
+	background:var(--five-color);
 	margin-right:20px;
 	justify-content: center;
 	border-radius: 4px;
@@ -273,7 +273,7 @@ color:#757575;
 	line-height: 26px;
 	letter-spacing: 0.03em;
 	text-align: center;
-	color:#212121;
+	color:var(--main-color);
 	height:38px;
 	width:145px;
 	display:flex;
@@ -286,15 +286,15 @@ color:#757575;
 .filters li.item a:hover {
 	background-color: #2196F3;
 		border-radius: 4px;
-		color:#fff;
+		color:var(--third-color);
 }
 .top-filters li.item a:focus {
-	background-color: #2196F3;
+	background-color:var(--four-color);
 	border-radius: 4px;
-	color:#fff;
+	color:var(--third-color);
 }
 .top-filters li.item a:active {
-	background-color: #2196F3;
+	background-color:var(--four-color);
 	border-radius: 4px;
 	color:#fff;
 }
@@ -308,7 +308,7 @@ color:#757575;
 	text-decoration:none;
 	display:inline-block;
 	margin-left:22px;
-	border:1px solid #eee;
+	border:1px solid var(--seven-color);
 	margin-bottom:25px;
 }
 .content-paragraf {
@@ -317,7 +317,7 @@ font-weight: 700;
 line-height: 36px;
 letter-spacing: 0.06em;
 text-align: left;
-color:#212121;
+color:var(--main-color);
 margin-left:15px;
 
 }
@@ -326,7 +326,7 @@ font-size: 16px;
 line-height: 30px;
 letter-spacing: 0.03em;
 text-align: left;
-color:#757575;
+color:var(--secondary-color);
 margin-left:15px;
 
 }
@@ -340,17 +340,23 @@ margin-left:15px;
 /*--FOOTER--START--*/
 .footer {
 	height:252px;
-	background-color:#2F303A;
+	background-color:var(--six-color);
 }
-.footer a.logo {
-	padding-top:36px;
+.logo-bottom {
+	padding-top:60px;
+	font-family: 'Raleway';
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 31px;
+	letter-spacing: 0.03em;
+	color:var(--four-color);
 }
 .logo-color-white {
-	color:#fff;
+	color:var(--third-color);
 }
 .footer ul {
 	padding-top:111px;
-	background-color:#2F303A;
+	background-color:var(--six-color);
 }
 
 
@@ -358,19 +364,19 @@ margin-left:15px;
 line-height: 24px;
 letter-spacing: 0.03em;
 text-align: left;
-color:#fff;
+color:var(--third-color);
 
 }
 .email-phone {
 line-height: 24px;
 letter-spacing: 0.03em;
 text-align: left;
-color:#757575;
+color:var(--secondary-color);
 }
 .email-phone:hover {
-	color:#2196F3;
+	color:var(--four-color);
 }
 .email-phone:focus {
-	color:#2196F3;
+	color:var(--four-color);
 }
 /*--FOOTER--END--*/
