--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,9 @@ section {
 a {
 	text-decoration:none;	
 }
+.current {
+color:var(--four-color);	
+}
 /*--HEADER--START--*/
 
 .menu {
@@ -80,7 +83,7 @@ color:var(--main-color);
 }
 .item-link   {
 font-weight: 500;
-line-height: 0.7;
+line-height: 1.4;
 letter-spacing: 0.02em;
 text-align: left;
 text-decoration:none;
@@ -88,16 +91,10 @@ color:var(--secondary-color);
 padding-top:32px;
 padding-bottom: 34px;
 }
-.navigation-link:hover{
+.menu a:hover {
 	color:var(--four-color);
 }
-.navigation-link:focus{
-	color:var(--four-color);
-}
-.item-link:hover {
-	color:var(--four-color);
-}
-.item-link:focus {
+.menu a:focus {
 	color:var(--four-color);
 }
 /*--HEADER--END--*/
@@ -105,18 +102,18 @@ padding-bottom: 34px;
 /*index.html*/
 
 .hero  {
-	height:500px;
-	background-color:#2F303A;
+	height:586px;
+	background-color:var(--six-color);
 	padding-top:0;
 }
 .hero-title-h1 {
 	padding-top:200px;
 	font-size: 44px;
 	font-weight: 900;
-	line-height: 0.73;
+	line-height: 1.4;
 	letter-spacing: 0.06em;
 	text-align: center;
-	color:#fff;
+	color:var(--third-color);
 	margin-top:0;
 	margin-bottom:15px;
 	text-transform:uppercase ;
@@ -127,7 +124,7 @@ padding-bottom: 34px;
 	height:50px;
 	width:200px;
  	margin-left:532px;
-	background: #2196F3;
+	background: var(--four-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
 	font-size: 16px;
@@ -164,7 +161,7 @@ padding-bottom: 34px;
 
 }
 .info-paragraf {
-	line-height: 24px;
+	line-height: 1.7;
 	letter-spacing: 0.03em;
 	text-align: left;
 	color:var(--secondary-color);
@@ -185,7 +182,6 @@ padding-bottom: 34px;
 	margin:0 auto;
 	font-size: 36px;
 	font-weight: 700;
-	line-height: 42px;
 	letter-spacing: 0.03em;
 	text-align: center;
 	color:var(--main-color);
@@ -205,7 +201,6 @@ padding-bottom: 34px;
 margin:0 auto;
 font-size: 36px;
 font-weight: 700;
-line-height: 42px;
 letter-spacing: 0.03em;
 text-align: center;
 color:var(--main-color);
@@ -214,7 +209,6 @@ color:var(--main-color);
 .person-title-h3 {
 	font-size: 16px;
 	font-weight: 500;
-	line-height: 19px;
 	letter-spacing: 0.03em;
 	text-align: center;
 	color:var(--main-color);
@@ -222,7 +216,7 @@ color:var(--main-color);
 }
 .person-paragraf {
 font-size: 16px;
-line-height: 19px;
+line-height:1.2;
 letter-spacing: 0.03em;
 text-align: center;
 color:var(--secondary-color);
@@ -270,7 +264,6 @@ color:var(--secondary-color);
 	text-decoration:none;
 	font-size: 16px;
 	font-weight: 500;
-	line-height: 26px;
 	letter-spacing: 0.03em;
 	text-align: center;
 	color:var(--main-color);
@@ -284,7 +277,7 @@ color:var(--secondary-color);
 }
 
 .filters li.item a:hover {
-	background-color: #2196F3;
+	background-color:var(--four-color);
 		border-radius: 4px;
 		color:var(--third-color);
 }
@@ -314,7 +307,7 @@ color:var(--secondary-color);
 .content-paragraf {
 font-size: 18px;
 font-weight: 700;
-line-height: 36px;
+line-height: 1.2;
 letter-spacing: 0.06em;
 text-align: left;
 color:var(--main-color);
@@ -323,7 +316,6 @@ margin-left:15px;
 }
 .content-title-h3 {
 font-size: 16px;
-line-height: 30px;
 letter-spacing: 0.03em;
 text-align: left;
 color:var(--secondary-color);
