--- a/css/styles.css
+++ b/css/styles.css
@@ -24,13 +24,11 @@ ul,li {
 	margin:0 auto;
 }
 section {
-	padding-top:92px;
+	padding-top:94px;
+	padding-bottom:94px;
 }
 a {
 	text-decoration:none;	
-}
-.current {
-color:var(--four-color);	
 }
 /*--HEADER--START--*/
 
@@ -96,6 +94,9 @@ padding-bottom: 34px;
 .menu a:focus {
 	color:var(--four-color);
 }
+.current {
+color:var(--four-color);	
+} 
 /*--HEADER--END--*/
 /*--MAIN--HERO-START--*/
 /*index.html*/
@@ -288,7 +289,7 @@ color:var(--secondary-color);
 .top-filters li.item a:active {
 	background-color:var(--four-color);
 	border-radius: 4px;
-	color:#fff;
+	color:var(--third-color);
 }
 .content-list {
 	list-style:none;
@@ -334,16 +335,13 @@ margin-left:15px;
 	background-color:var(--six-color);
 }
 .logo-bottom {
+	padding-top:60px;
 	font-family: 'Raleway';
 	font-weight: 700;
 	font-size: 26px;
 	letter-spacing: 0.03em;
 	color:var(--four-color);
 	line-height:1.2;
-	position: absolute;
-    	width: 145px;
-    	height: 31px;
-    	top: 60px;
 }
 .logo-color-white {
 	color:var(--third-color);
