--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ color:var(--four-color);
 	height:586px;
 	background-color:var(--six-color);
 	padding-top:0;
+	padding-bottom:0;
 }
 .hero-title-h1 {
 	padding-top:200px;
@@ -168,6 +169,9 @@ color:var(--four-color);
 	margin-bottom:0;
 
 	
+}
+.img {
+padding-top:0;	
 }
 .img-list {
 	margin-top:92px;
@@ -333,6 +337,7 @@ margin-left:15px;
 .footer {
 	height:252px;
 	background-color:var(--six-color);
+	position:relative;
 }
 .logo-bottom {
 	padding-top:60px;
@@ -342,6 +347,8 @@ margin-left:15px;
 	letter-spacing: 0.03em;
 	color:var(--four-color);
 	line-height:1.2;
+	position: absolute;
+	top: 60px;
 }
 .logo-color-white {
 	color:var(--third-color);
