--- a/css/styles.css
+++ b/css/styles.css
@@ -108,13 +108,11 @@ color:var(--four-color);
 /*index.html*/
 
 .hero  {
-	height:586px;
 	background-color:var(--six-color);
-	padding-top:0;
-	padding-bottom:0;
+	padding-top:200px;
+	padding-bottom:200px;
 }
 .hero-title-h1 {
-	padding-top:200px;
 	font-size: 44px;
 	font-weight: 900;
 	line-height: 1.4;
@@ -124,6 +122,7 @@ color:var(--four-color);
 	margin-top:0;
 	margin-bottom:15px;
 	text-transform:uppercase ;
+	width:700px;
 
 	
 }
