--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ color:var(--secondary-color);
 	margin-left:22px;
 	border:1px solid var(--seven-color);
 	margin-bottom:25px;
+	width:370px;
 }
 .content-paragraf {
 font-size: 18px;
