--- a/css/styles.css
+++ b/css/styles.css
@@ -266,8 +266,6 @@ color:var(--secondary-color);
 	background-color:var(--four-color);
 	margin-right:20px;
 	justify-content: center;
-	border-radius: 4px;
-	border:none;
 }
 .filters-link {
 	font-size: 16px;
@@ -280,21 +278,21 @@ color:var(--secondary-color);
 	display:flex;
 	justify-content:center;
 	align-items:center;
+	border-radius: 4px;
+	border:none;
+	background-color:var(--five-color);
 }
 
 .filters-item a:hover {
 	background-color:var(--four-color);
-		border-radius: 4px;
-		color:var(--third-color);
+	color:var(--third-color);
 }
 .top-filters-item a:focus {
 	background-color:var(--four-color);
-	border-radius: 4px;
 	color:var(--third-color);
 }
 .top-filters li.item a:active {
 	shadow-bottom:3px;
-	border-radius: 4px;
 	color:var(--third-color);
 }
 .content-list {
