--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ color:var(--four-color);
 	margin-bottom:15px;
 	text-transform:uppercase ;
 	width:700px;
-````````margin-left:250px;
+	margin-left:250px;
 	
 }
 .hero-button {
