--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ a {
 /*--HEADER--START--*/
 
 .menu {
-	display:inline-flex;
+	display:flex;
 	flex-direction: row;
 	border-bottom:1px solid var(--seven-color);
 	margin:0 auto;
