--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ ul,li {
 .container {
 	width:1200px;
 	margin:0 auto;
-	padding: 15px 15px;
+	padding: 0 15px;
 }
 section {
 	padding-top:94px;
@@ -30,6 +30,17 @@ section {
 }
 a {
 	text-decoration:none;	
+}
+p {
+margin:0;	
+}
+h1,h2,h3,h4,h5,h6 {
+margin:0;	
+}
+img {
+	display:block;
+	max-width:100%;
+	height:auto;
 }
 /*--HEADER--START--*/
 
@@ -118,6 +129,7 @@ color:var(--four-color);
 	background-color:var(--six-color);
 	padding-top:200px;
 	padding-bottom:200px;
+	text-align:center;
 }
 .hero-title-h1 {
 	font-size: 44px;
@@ -130,13 +142,12 @@ color:var(--four-color);
 	margin-bottom:15px;
 	text-transform:uppercase ;
 	width:700px;
-	margin-left:250px;
+	margin:0 auto;
 	
 }
 .hero-button {
 	height:50px;
 	width:200px;
- 	margin-left:532px;
 	background: var(--four-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 4px;
@@ -147,6 +158,8 @@ color:var(--four-color);
 	text-align: center;
 	color:var(--third-color);
 	cursor:pointer;
+	border:none;
+	margin-top:30px;
 	
 }
 .info-title-h2 {
