--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ color:var(--four-color);
 	text-align: left;
 	color:var(--main-color);
 	margin-top:0;
-	margin-bottom:0;
+	margin-bottom:10px;
 	text-transform: uppercase;
 
 }
@@ -233,6 +233,8 @@ color:var(--main-color);
 	letter-spacing: 0.03em;
 	text-align: center;
 	color:var(--main-color);
+	padding-top:30px;
+	margin-bottom:10px;
 
 }
 .person-paragraf {
@@ -241,6 +243,7 @@ line-height:1.2;
 letter-spacing: 0.03em;
 text-align: center;
 color:var(--secondary-color);
+	margin-bottom:30px;
 
 }
 .person-list {
